--- a/seasons/src/seasonDisplay.css
+++ b/seasons/src/seasonDisplay.css
@@ -1,34 +1,34 @@
 .icon-left{
     position: absolute;
-    top : 10px;
     left : 10px;
+    top : 10px;
 }
 
 .icon-right{
     position: absolute;
-    bottom : 10px;
-    right: 10px;
+    right : 10px;
+    bottom : 10px
 }
 
 .season-display{
-    display : flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
 
-.season-display.winter i{
-    color : blue;
+.season-display.Summer i{
+    color: red;
 }
 
-.season-display.summer i{
-    color : red;
+.season-display.Winter i{
+    color: blue;
 }
 
-.winter {
-    background-color: aliceblue;
-}
-
-.summer {
+.Summer{
     background-color: orange;
+}
+
+.Winter{
+    background-color: aliceblue;
 }
